# whiteboard

./: CMakeLists.txt  findfiledialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  whiteboard.cpp  whiteboard.h  whiteboard.pro
